prev-next bugfix when moving left and right with overflow

--- a/src/Keyboard/Keyboard.scss
+++ b/src/Keyboard/Keyboard.scss
@@ -79,6 +79,9 @@
           max-width: 100%;
           overflow: hidden;
           text-align: right;
+          &:nth-of-type(2){
+            justify-content: flex-start;
+          }
         }
 
         &:focus {
